# iewc

./: .gitignore  README.md  pyproject.toml
docs/: run_tables.md  runs_table.md
iewc/: __init__.py  avalanche.py  config.py  diagonal_regularization.py  empirical2_forecasting.py  empirical2_nlp.py  empirical2_trace.py  empirical2_vision.py  importance.py  low_rank.py  output_metrics.py  real_segmentation.py  split_mnist_benchmark.py  synthetic_classification.py  synthetic_diffusion.py  synthetic_ordered_metric.py  synthetic_regression.py  synthetic_segmentation.py
scripts/: build_empirical2_report.py  build_empirical2_tables.py  build_empirical_artifacts.py  build_internal_lambda_tradeoff.py  build_joint_lambda_validation.py  empirical2_forecasting_run.py  empirical2_nlp_run.py  empirical2_vision_run.py  feature_preservation_ief_diagnostic.py  make_diffusion_sample_grid.py  mnist_diffusion_lambda_sweep.py  output_metric_diagnostic.py  pet_segmentation_run.py  run_empirical2_tuning.py  run_empirical_suite.py  run_facil_mechanism_checks.py  run_facil_second_pass.py  run_facil_spectrum_diagnostics.py  run_internal_lambda_tradeoff.py  run_joint_lambda_validation.py  search_iewc_weighting.py  split_mnist_benchmark_run.py  synthetic_classification_run.py  synthetic_contamination_diagnostic.py  synthetic_diffusion_run.py  synthetic_ordered_metric_run.py  synthetic_regression_run.py  synthetic_segmentation_run.py  tune_nonclassification_ef.py  update_facil_tau_sensitivity.py  voc_segmentation_run.py
tests/: test_avalanche_plugin.py  test_diagonal_regularization.py  (+10 more)
(+6 files in other folders)
